# helm-guard

./: .gitignore  .helm-guard.yaml  .pre-commit-hooks.yaml  404.html  CONTRIBUTING.md  README.md  demo.tape  index.html  pyproject.toml  review-final.md  review-impl-r1.md  sitemap.xml
.github/workflows/: ci.yml  release.yml
architecture/overview/: index.html
assets/css/: extra.css
contributing/setup/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/configuration/: index.html
helm_guard/: __init__.py  __main__.py  cli.py  config.py  fixer.py  formatter.py  parser.py
helm_guard/checks/: __init__.py  _common.py  deps.py  hooks.py  injection.py  namespace.py  olm.py  pinning.py  provenance.py  security.py  trust.py
reference/cli/: index.html
reference/rules/: index.html
search/: search_index.json
site/: mkdocs.yml
site/docs/: index.md
site/docs/architecture/: overview.md
site/docs/contributing/: setup.md
site/docs/getting-started/: installation.md  quickstart.md
site/docs/guides/: configuration.md
site/docs/reference/: cli.md  rules.md
tests/: test_checks.py  test_cli.py  test_cve_checks.py  test_deeper_checks.py  test_fixer.py  test_new_checks.py  test_parser.py  test_phase2_checks.py  test_phase3_checks.py
tests/fixtures/clean-chart/: .helmignore  Chart.yaml  values.schema.json  values.yaml
tests/fixtures/clean-new-checks-chart/: Chart.yaml  values.schema.json  values.yaml
tests/fixtures/cve-chart/: Chart.yaml  values.yaml
tests/fixtures/new-checks-chart/: Chart.yaml  (+2 more)
(+29 files in other folders)
